--- a/styles/main.scss
+++ b/styles/main.scss
@@ -16,7 +16,6 @@ $background: url(../src/chivasClubGris.svg);
   grid-row-end: $end;
 }
 
-
 * {
   font-family: "Montserrat", sans-serif;
   margin: 0;
@@ -24,7 +23,7 @@ $background: url(../src/chivasClubGris.svg);
 }
 
 .container {
-   background: $background;
+  background: $background;
   section {
     @include gridAlign();
     .mainText {
@@ -122,16 +121,15 @@ $background: url(../src/chivasClubGris.svg);
   }
 }
 
-
 .footer {
   background: $background;
   .textfooter {
     width: 80%;
-    @include gridRowStart(2,2);
+    @include gridRowStart(2, 2);
   }
   .trofeos-footer {
     text-align: center;
-    @include gridRowStart(3,3);
+    @include gridRowStart(3, 3);
     #copa {
       width: 13%;
     }
@@ -153,11 +151,69 @@ $background: url(../src/chivasClubGris.svg);
     }
   }
 
-  .footertext{
-    @include gridRowStart(5,5);
+  .footertext {
+    @include gridRowStart(5, 5);
     text-align: center;
-    .imgText{
+    .imgText {
       width: 40em;
+    }
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .trofeos {
+    .secondary-text {
+      position: absolute;
+      align-self: baseline;
+    }
+    .trofeos-container {
+      grid-template-columns: repeat(2, 1fr);
+      @include gridRowStart(6, 6);
+      img {
+        width: 60%;
+      }
+    }
+
+    .campeones {
+      grid-template-columns: repeat(2, 1fr);
+      .trofeo-campeones {
+        margin: 1em 1em;
+        width: 50%;
+      }
+    }
+
+    .copa-mexico {
+      @include gridRowStart(4, 4);
+      grid-template-columns: repeat(2, 1fr);
+      .trofeo-copa {
+        width: 70%;
+      }
+    }
+
+    .copa-concacaf {
+      @include gridRowStart(4, 4);
+      grid-template-columns: repeat(1, 1fr);
+      .trofeo-concacaf {
+        width: 70%;
+      }
+    }
+
+    .copa-challenger {
+      @include gridRowStart(4, 4);
+      grid-template-columns: repeat(1, 1fr);
+    }
+
+    .copa-pentagonales {
+      grid-template-columns: repeat(3, 1fr);
+      @include gridRowStart(4, 4);
+      .trofeo-pentagonales {
+        margin: 0 3em;
+        width: 40%;
+      }
+      .trofeo-guadalajara {
+        margin: 0 3em;
+        width: 40%;
+      }
     }
   }
 }
